Add search stock ajax and errors

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,3 +18,15 @@
 .container {
 	width: 80%;
 }
+
+.results-block {
+	display: inline-block;
+}
+
+.no-padding {
+	padding: 0 !important;
+}
+
+footer {
+	text-align: center;
+}
