--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -18,4 +18,8 @@
 <div id="results">
 	<%= render 'users/result' %>
 </div>
-<%= render 'stocks/list' %>
+<% if @user_stocks.size > 0 %>
+	<%= render 'stocks/list' %>
+<% else %>
+	<p class="lead">You don't have any stocks tracking yet</p>
+<% end %>
