--- a/app/views/friends/_result.html.erb
+++ b/app/views/friends/_result.html.erb
@@ -8,11 +8,18 @@
 		<div id="friend-lookup-results" class="well center-block col-md-12">
 			<div class="table-responsive">
 				<table class="search-results-table col-md-12">
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Email</th>
+							<th>Actions</th>
+						</tr>
+					</thead>
 					<tbody>
 						<% @users.each do |user| %>
 							<tr>
-								<td><strong>Name: </strong><%= user.full_name %></td>
-								<td><strong>Email: </strong><%= user.email %></td>
+								<td><%= user.full_name %></td>
+								<td><%= user.email %></td>
 								<td><%= link_to "View Profile", user_path(user), class: "btn btn-xs btn-success" %>
 								<% if current_user.not_friends_with?(user.id) %>
 									<%= link_to "Add as my friend", add_friend_path(user: current_user, friend: user), class: "btn btn-xs btn-success", method: :post %>
